traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/script.rpy", line 599, in script
    e "[playerNName?]"
  File "<none>", line 1
    playerNName?
               ^
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/script.rpy", line 599, in script
    e "[playerNName?]"
  File "renpy/ast.py", line 2925, in execute
    Say.execute(self)
    ~~~~~~~~~~~^^^^^^
  File "renpy/ast.py", line 991, in execute
    renpy.exports.say(who, what, *args, **kwargs)
    ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/exports/sayexports.py", line 129, in say
    who(what, *args, **kwargs)
    ~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/character.py", line 1550, in __call__
    what = self.prefix_suffix("what", self.what_prefix, what, self.what_suffix)
           ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/character.py", line 1464, in prefix_suffix
    return sub(prefix) + sub(body, translate=not renpy.game.context().translated) + sub(suffix)
                         ~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^              
  File "renpy/character.py", line 1443, in sub
    return renpy.substitutions.substitute(s, scope=scope, force=force, translate=translate)[0]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   
  File "renpy/substitutions.py", line 355, in substitute
    s = interpolate(s, variables)  # type: ignore
        ~~~~~~~~~~~^^^^^^^^^^^^^^                
  File "renpy/substitutions.py", line 89, in interpolate
    raise e
  File "renpy/substitutions.py", line 81, in interpolate
    value = renpy.python.py_eval(code, {}, scope)
            ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1303, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1260, in py_compile
    raise e
  File "renpy/python.py", line 1190, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<none>", line 1
    playerNName?
               ^
SyntaxError: invalid syntax

Windows-11-10.0.26200-SP0 AMD64
Ren'Py 8.5.2.26010301
The dim light 1.0
Thu Mar 19 23:22:00 2026
